# skolmaten-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs  structs.rs
