[package]
name = "skolmaten-cli"
description = "Se matsedeln direkt från terminalen"
repository = "https://github.com/LeonHellqvist/skolmaten-cli"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"

[profile.release]
strip = true

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.23.0", features = ["full"] }
serde_derive = "1.0.150"
serde = "1.0.150"
serde_json = "1.0.89"
colored = "2.0.0"
chrono = "0.4.23"